--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body> 
     <h1>Welcome to My Website!</h1>
     <p> 
-      <a href="/parasite/midterm/code1.html">1</a> 
+      <a href="/Parasite/midterm/code1.html">Parasite (midterm)</a> 
     </p> 
   </body> 
 </html> 
