--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <p> 
       <a href="/Parasite/midterm/code1.html">Parasite (midterm)</a> 
     </p> 
+    <p> 
+      <a href="/Parasite/final/code2.html">Parasite (final)</a> 
+    </p> 
   </body> 
 </html> 
