--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body> 
     <h1>Welcome to My Website!</h1>
     <p> 
-      <a href="/Parasite/midterm/code1.html">Parasite (midterm)</a> 
+      <a href="/My-Project/Parasite/midterm/code1.html">Parasite (midterm)</a> 
     </p> 
     <p> 
-      <a href="/Parasite/final/code2.html">Parasite (final)</a> 
+      <a href="/My-Project/Parasite/final/code2.html">Parasite (final)</a> 
     </p> 
   </body> 
 </html> 
