--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!-- index.html --> 
 <!DOCTYPE html> 
 <html> 
-  <head> 
-    <title>My Website</title> 
+  <html lang="zh">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/index_css.css" rel="stylesheet">
   </head> 
-  <body> 
-    <h1>Welcome to My Website!</h1>
-    <p> 
-      <a href="/My-Project/Parasite/midterm/code1.html">Parasite (midterm)</a> 
-    </p> 
-    <p> 
-      <a href="/My-Project/Parasite/final/code2.html">Parasite (final)</a> 
-    </p> 
+  <body>
+    <div id="header" class="layout">
+      <div id="header-content" class="content">
+        <h1>Welcome to My Website!</h1>
+      </div>
+    </div>
+    <div id="navbar" class="layout">
+      <div id="navbar-content" class="content">
+      </div>
+    </div>
+    <div id="sidebar" class="layout">
+      <div id="sidebar-content" class="content">
+      </div>
+    </div>
+    <div id="container" class="layout">
+      <div id="container-content" class="content">
+        <p>Parasite</p>
+        <ul>
+          <li><a href="/My-Project/Parasite/midterm/code1.html">midterm</a></li>
+          <li><a href="/My-Project/Parasite/final/code2.html">final</a></li>
+        </ul>
+      </div> 
+    </div>
   </body> 
 </html> 
