--- a/Parasite/final/code2.html
+++ b/Parasite/final/code2.html
@@ -87,6 +87,7 @@
     {question: "弓形蟲", answer: "Toxoplasma gondii"},
     {question: "肺胞子蟲", answer: "Pneumocystis carinii"},
     {question: "巴貝氏原蟲", answer: "Babesia spp"},
+    {question: "大腸纖毛蟲", answer: "Balantidium coli"},
     {question: "痢疾阿米巴", answer: "Entamoeba histolytica"},
     {question: "福氏耐格里阿米巴", answer: "Naegleria fowleri"},
     {question: "棘阿米巴", answer: "Acanthamoeba spp"},
