--- a/Parasite/final/code2.html
+++ b/Parasite/final/code2.html
@@ -154,6 +154,12 @@
 
     window.onload = function() {
       nextQ();
+
+      document.getElementById("ansInput").addEventListener("keyup", ({key}) => {
+        if (key === "Enter") {
+          checkAns();
+        }
+      });
     };
   </script>
 </body>
