--- a/Parasite/midterm/code1.html
+++ b/Parasite/midterm/code1.html
@@ -155,6 +155,12 @@
 
     window.onload = function() {
       nextQ();
+
+      document.getElementById("ansInput").addEventListener("keyup", ({key}) => {
+        if (key === "Enter") {
+          checkAns();
+        }
+      });
     };
   </script>
 </body>
