--- a/Parasite/final/code2.html
+++ b/Parasite/final/code2.html
@@ -35,6 +35,10 @@
       font-size: 120%;
       font-weight: bold;
     }
+    #checkbox {
+      position: absolute;
+      bottom: 80px;
+    }
     #percent_cont {
       position: absolute;
       bottom: 40px;
@@ -59,16 +63,22 @@
     <button id="submit" onclick="checkAns()" class="button">Submit</button>
     <button id="next" onclick="nextQ()" class="button">Next</button>
     <p id="result" class="result"></p>
+    <div id="checkbox">
+      <input type="checkbox" data-id="trematoda_" checked> 吸蟲 <br />
+      <input type="checkbox" data-id="protozoa_" checked> 原蟲 <br />
+      <input type="checkbox" data-id="amoeba_" checked> 阿米巴 <br />
+      <input type="checkbox" data-id="snail_" checked> 蝸牛 <br />
+    </div>
     <div id="percent_cont">    
       <label for="percentage" id="perc_label">英文學名出現比例：</label>
       <input type="range" id="percentage" name="percentage" min="0" max="10">
     </div>
-    <!-- <p id="debug"></p> -->
+    <p id="debug"></p>
     <p id="name">1101037</p>
   </div>
 
   <script>
-    let quiz = [
+    let trematoda_ = [
     {question: "中華肝吸蟲", answer: "Clonorchis sinensis"},
     {question: "牛羊肝吸蟲", answer: "Fasciola hepatica"},
     {question: "衛氏肺吸蟲", answer: "Paragonimus westermani"},
@@ -79,20 +89,6 @@
     {question: "日本住血吸蟲", answer: "Schistosoma japonicum"},
     {question: "埃及住血吸蟲", answer: "Schistosoma haematobium"},
     {question: "曼森住血吸蟲", answer: "Schistosoma mansoni"},
-    {question: "間日瘧原蟲", answer: "Plasmodium vivax"},
-    {question: "三日瘧原蟲", answer: "Plasmodium malariae"},
-    {question: "惡性瘧原蟲", answer: "Plasmodium falciparum"},
-    {question: "卵形瘧原蟲", answer: "Plasmodium ovale"},
-    {question: "等胞球蟲", answer: "Isospara spp"},
-    {question: "弓形蟲", answer: "Toxoplasma gondii"},
-    {question: "肺胞子蟲", answer: "Pneumocystis carinii"},
-    {question: "巴貝氏原蟲", answer: "Babesia spp"},
-    {question: "大腸纖毛蟲", answer: "Balantidium coli"},
-    {question: "痢疾阿米巴", answer: "Entamoeba histolytica"},
-    {question: "福氏耐格里阿米巴", answer: "Naegleria fowleri"},
-    {question: "棘阿米巴", answer: "Acanthamoeba spp"},
-    {question: "巴拉目阿米巴", answer: "Balamuthia mandrilaris"},
-    {question: "大腸阿米巴", answer: "Entamoeba coli"},
     {question: "唇形鞭毛蟲", answer: "Cheilomastix mesnili"},
     {question: "梨形鞭毛蟲", answer: "Giardia lamblia"},
     {question: "陰道鞭毛滴蟲", answer: "Trichomonas vaginalis"},
@@ -104,13 +100,43 @@
     {question: "布氏甘比亞錐蟲", answer: "Trypanosoma brucei gambiense"},
     {question: "布氏羅得西亞錐蟲", answer: "Trypanosoma brucei rhodesiense"},
     {question: "枯氏錐蟲", answer: "Trypanosoma cruzi"}
-];
+    ];
+    let protozoa_ = [
+    {question: "間日瘧原蟲", answer: "Plasmodium vivax"},
+    {question: "三日瘧原蟲", answer: "Plasmodium malariae"},
+    {question: "惡性瘧原蟲", answer: "Plasmodium falciparum"},
+    {question: "卵形瘧原蟲", answer: "Plasmodium ovale"},
+    {question: "等胞球蟲", answer: "Isospara spp"},
+    {question: "弓形蟲", answer: "Toxoplasma gondii"},
+    {question: "肺胞子蟲", answer: "Pneumocystis carinii"},
+    {question: "巴貝氏原蟲", answer: "Babesia spp"},
+    {question: "大腸纖毛蟲", answer: "Balantidium coli"}
+    ];
+    let amoeba_ = [
+    {question: "痢疾阿米巴", answer: "Entamoeba histolytica"},
+    {question: "福氏耐格里阿米巴", answer: "Naegleria fowleri"},
+    {question: "棘阿米巴", answer: "Acanthamoeba spp"},
+    {question: "巴拉目阿米巴", answer: "Balamuthia mandrilaris"},
+    {question: "大腸阿米巴", answer: "Entamoeba coli"}
+    ];
+    let snail_ = [
+    {question: "顆粒洗螺", answer: "Thiara spp"},
+    {question: "派螺", answer: "Parafossarulus spp"},
+    {question: "鈴螺", answer: "Lymnaea spp"},
+    {question: "黑螺", answer: "Hippeutis spp"},
+    {question: "小扁卷螺", answer: "Segmentina spp"},
+    {question: "臺灣釘螺", answer: "Oncomelania formosana"},
+    {question: "大扁卷螺", answer: "Biomphalaria spp"}
+    ];
     
+    let quiz = [];    
+
     let SelectedQ;
     let SelectedA;
     let randomN = 0;
     let rand = -1;
     let norepeat = [];
+    const checkBoxes = document.querySelectorAll("input[type=checkbox]");
 
     function nextQ() {
       do {
@@ -118,10 +144,10 @@
       } while (norepeat.includes(randomN) === true);
       rand = randomN;
 
-      norepeat.unshift(rand);
+      norepeat.push(rand);
 
       if (norepeat.length >= Math.floor(quiz.length * 0.75)) {
-        norepeat.pop();
+        norepeat.shift();
       }
 
       let percentage = document.getElementById("percentage").value;
@@ -138,7 +164,7 @@
       document.getElementById("question").innerHTML = `${SelectedQ}`;
       document.getElementById("result").innerHTML = ``;
       document.getElementById("ansInput").value = "";
-      //document.getElementById("debug").innerHTML = `rand=${rand}, norepeat=${norepeat.toString()}`;
+      document.getElementById("debug").innerHTML = `rand=${rand}, norepeat=${norepeat.toString()}`;
     }
 
     function checkAns() {
@@ -149,18 +175,35 @@
       }
       else {
         document.getElementById("result").innerHTML = `Incorrect! <i>${SelectedA}</i>`;
+        norepeat.pop();
       }
     }
 
-    window.onload = function() {
+    function updateQuiz() {
+      quiz = Array.from(checkBoxes)
+        .filter(elm => elm.checked)
+        .flatMap(elm => {
+          const dataId = elm.getAttribute('data-id');
+          if (dataId === 'trematoda_') return trematoda_;
+          if (dataId === 'protozoa_') return protozoa_;
+          if (dataId === 'amoeba_') return amoeba_;
+          if (dataId === 'snail_') return snail_;
+          return [];
+        });
+      norepeat = [];
       nextQ();
+    }
 
+    window.onload = function() {
+      checkBoxes.forEach(elm => elm.addEventListener("change", updateQuiz));
+      updateQuiz();
+      
       document.getElementById("ansInput").addEventListener("keyup", ({key}) => {
         if (key === "Enter") {
           checkAns();
         }
       });
-    };
+    }
   </script>
 </body>
 </html>
