--- a/Parasite/final/code2.html
+++ b/Parasite/final/code2.html
@@ -73,7 +73,7 @@
       <label for="percentage" id="perc_label">英文學名出現比例：</label>
       <input type="range" id="percentage" name="percentage" min="0" max="10">
     </div>
-    <p id="debug"></p>
+    <!-- <p id="debug"></p> -->
     <p id="name">1101037</p>
   </div>
 
@@ -164,7 +164,7 @@
       document.getElementById("question").innerHTML = `${SelectedQ}`;
       document.getElementById("result").innerHTML = ``;
       document.getElementById("ansInput").value = "";
-      document.getElementById("debug").innerHTML = `rand=${rand}, norepeat=${norepeat.toString()}`;
+      //document.getElementById("debug").innerHTML = `rand=${rand}, norepeat=${norepeat.toString()}`;
     }
 
     function checkAns() {
