--- a/Parasite/final/code2.html
+++ b/Parasite/final/code2.html
@@ -89,6 +89,17 @@
     {question: "日本住血吸蟲", answer: "Schistosoma japonicum"},
     {question: "埃及住血吸蟲", answer: "Schistosoma haematobium"},
     {question: "曼森住血吸蟲", answer: "Schistosoma mansoni"},
+    ];
+    let protozoa_ = [
+    {question: "間日瘧原蟲", answer: "Plasmodium vivax"},
+    {question: "三日瘧原蟲", answer: "Plasmodium malariae"},
+    {question: "惡性瘧原蟲", answer: "Plasmodium falciparum"},
+    {question: "卵形瘧原蟲", answer: "Plasmodium ovale"},
+    {question: "等胞球蟲", answer: "Isospara spp"},
+    {question: "弓形蟲", answer: "Toxoplasma gondii"},
+    {question: "肺胞子蟲", answer: "Pneumocystis carinii"},
+    {question: "巴貝氏原蟲", answer: "Babesia spp"},
+    {question: "大腸纖毛蟲", answer: "Balantidium coli"},
     {question: "唇形鞭毛蟲", answer: "Cheilomastix mesnili"},
     {question: "梨形鞭毛蟲", answer: "Giardia lamblia"},
     {question: "陰道鞭毛滴蟲", answer: "Trichomonas vaginalis"},
@@ -100,17 +111,6 @@
     {question: "布氏甘比亞錐蟲", answer: "Trypanosoma brucei gambiense"},
     {question: "布氏羅得西亞錐蟲", answer: "Trypanosoma brucei rhodesiense"},
     {question: "枯氏錐蟲", answer: "Trypanosoma cruzi"}
-    ];
-    let protozoa_ = [
-    {question: "間日瘧原蟲", answer: "Plasmodium vivax"},
-    {question: "三日瘧原蟲", answer: "Plasmodium malariae"},
-    {question: "惡性瘧原蟲", answer: "Plasmodium falciparum"},
-    {question: "卵形瘧原蟲", answer: "Plasmodium ovale"},
-    {question: "等胞球蟲", answer: "Isospara spp"},
-    {question: "弓形蟲", answer: "Toxoplasma gondii"},
-    {question: "肺胞子蟲", answer: "Pneumocystis carinii"},
-    {question: "巴貝氏原蟲", answer: "Babesia spp"},
-    {question: "大腸纖毛蟲", answer: "Balantidium coli"}
     ];
     let amoeba_ = [
     {question: "痢疾阿米巴", answer: "Entamoeba histolytica"},
