--- a/Parasite/final/code2.html
+++ b/Parasite/final/code2.html
@@ -95,7 +95,7 @@
     {question: "三日瘧原蟲", answer: "Plasmodium malariae"},
     {question: "惡性瘧原蟲", answer: "Plasmodium falciparum"},
     {question: "卵形瘧原蟲", answer: "Plasmodium ovale"},
-    {question: "等胞球蟲", answer: "Isospara spp"},
+    {question: "等胞球蟲", answer: "Isospora spp"},
     {question: "弓形蟲", answer: "Toxoplasma gondii"},
     {question: "肺胞子蟲", answer: "Pneumocystis carinii"},
     {question: "巴貝氏原蟲", answer: "Babesia spp"},
