--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           <li><a href="/My-Project/Parasite/midterm/code1.html">midterm</a></li>
           <li><a href="/My-Project/Parasite/final/code2.html">final</a></li>
         </ul>
+        <p>Side</p>
+        <ul>
+          <li><a href="/My-Project/Side/CSV to custom text format.html">Custom CSV text format</a></li>
+        </ul>
       </div> 
     </div>
   </body> 
