--- a/Side/test.html
+++ b/Side/test.html
@@ -44,9 +44,8 @@ for (let i = 0; i < IDList.length; i++) {
     }
 };
 
-for (let i = 0; i < array.length; i++) {
+for (let i = 0; i < name.length; i++) {
     console.log(name[i]);
-    
 }
 
 
