--- a/Side/test.html
+++ b/Side/test.html
@@ -19,7 +19,7 @@ var protozoa_ = name[1];
 
 for (let i = 0; i < IDList.length; i++) {
     const httpRequest = new XMLHttpRequest();
-    var urls = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRZO5_Xb0jVltZCUnjJVOqE4d1q08pLnZugLRKJgChzBQqsCDbeIJKWRcm0Dy1bovTgOXHS7o8dnYlH/pub?gid=' + IDList[i].gSheetID + '&single=true&output=csv'
+    var urls = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRZO5_Xb0jVltZCUnjJVOqE4d1q08pLnZugLRKJgChzBQqsCDbeIJKWRcm0Dy1bovTgOXHS7o8dnYlH/pub?gid=' + IDList[i] + '&single=true&output=csv'
     httpRequest.open('GET',urls, true)
     httpRequest.send()
 
