--- a/Side/test.html
+++ b/Side/test.html
@@ -36,7 +36,7 @@ for (let i = 0; i < IDList.length; i++) {
                     name_list[i-1][name_csv[0][j]] = name_csv[i][j]
                 }
             }
-            return name[i] = (name_list);
+            console.log(name[i]);
         }
     }
 };
