--- a/Side/test.html
+++ b/Side/test.html
@@ -12,7 +12,7 @@
 <script>
 var IDList = ["0","812572364"];
 
-var name = [];
+var name = {};
 
 for (let i = 0; i < IDList.length; i++) {
     const httpRequest = new XMLHttpRequest();
@@ -36,6 +36,7 @@ for (let i = 0; i < IDList.length; i++) {
                     name_list[i-1][name_csv[0][j]] = name_csv[i][j]
                 }
             }
+            name[i] = name_list;
             console.log(name[i]);
         }
     }
