--- a/Side/test.html
+++ b/Side/test.html
@@ -36,17 +36,10 @@ for (let i = 0; i < IDList.length; i++) {
                     name_list[i-1][name_csv[0][j]] = name_csv[i][j]
                 }
             }
-            name[i] = name_list;
-            console.log(name[i]);
+            console.log(name_list);
         }
     }
 };
-
-for (let i = 0; i < name.length; i++) {
-    console.log(name[i]);
-}
-
-
 </script>
 
 </body>
