--- a/Side/test.html
+++ b/Side/test.html
@@ -12,7 +12,7 @@
 <script>
 var IDList = ["0","812572364"];
 
-var name = {};
+var name = [];
 
 for (let i = 0; i < IDList.length; i++) {
     const httpRequest = new XMLHttpRequest();
@@ -37,6 +37,8 @@ for (let i = 0; i < IDList.length; i++) {
                 }
             }
             console.log(name_list);
+            name[i] = name_list;
+            console.log(name[i]);
         }
     }
 };
