--- a/Side/test.html
+++ b/Side/test.html
@@ -37,7 +37,7 @@ for (let i = 0; i < IDList.length; i++) {
                 }
             }
             console.log(name_list);
-            name[i] = name_list;
+            name[i].push(name_list);
             console.log(name[i]);
         }
     }
