--- a/Side/test.html
+++ b/Side/test.html
@@ -33,7 +33,7 @@ function fetchData(id) {
             }
             console.log(name_list);
             name.push(name_list);
-            console.log(name[i]);
+            console.log(name[IDList.indexOf(id)]);
         }
     };
 }
