--- a/Side/test.html
+++ b/Side/test.html
@@ -13,7 +13,7 @@
 const IDList = ["0", "812572364", "1409221590", "32017675"];
 const name = [];
 
-function fetchData(id) {
+function fetchData(id, index) {
     const httpRequest = new XMLHttpRequest();
     const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRZO5_Xb0jVltZCUnjJVOqE4d1q08pLnZugLRKJgChzBQqsCDbeIJKWRcm0Dy1bovTgOXHS7o8dnYlH/pub?gid=' + id + '&single=true&output=csv';
     httpRequest.open('GET', url, true);
@@ -32,13 +32,13 @@ function fetchData(id) {
                 name_list.push(rowObject);
             }
             name.push(name_list);
-            console.log(name[IDList.indexOf(id)]);
+            console.log(name[index]); // Access data using index
         }
     };
 }
 
 // Call fetchData function for each ID in IDList
-IDList.forEach(fetchData);
+IDList.forEach((id, index) => fetchData(id, index));
 </script>
 
 </body>
