--- a/Side/test.html
+++ b/Side/test.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
-<div id="dataDisplay"></div>
+<div id="dataDisplay1"></div>
+<div id="dataDisplay2"></div>
+<div id="dataDisplay3"></div>
+<div id="dataDisplay4"></div>
 
 <script>
 const IDList = ["0", "812572364", "1409221590", "32017675"];
