--- a/Side/test.html
+++ b/Side/test.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 
-<div id="dataDisplay1"></div>
-<div id="dataDisplay2"></div>
-<div id="dataDisplay3"></div>
-<div id="dataDisplay4"></div>
+<div id="dataDisplay"></div>
 
 <script>
 const IDList = ["0", "812572364", "1409221590", "32017675"];
@@ -66,15 +63,6 @@ Promise.all(IDList.map(id => fetchData(id)))
     .catch(error => {
         console.error(error);
     });
-
-const trematoda_ = name[0];
-const protozoa_ = name[1];
-const amoeba_ = name[2];
-const snail_ = name[3];
-
-for (let i = 0; i < name.length; i++) {
-    document.getElementById("dataDisplay" + i).innerHTML = name[i];
-}
 </script>
 
 </body>
