--- a/Side/test.html
+++ b/Side/test.html
@@ -78,6 +78,6 @@
   </div>
 
   <script type = "text/javascript" src="get_data.js"></script>
-  <script type = "text/javascript" src="https://github.com/EmptyName723/My-Project/blob/main/Parasite/final/final.js"></script>
+  <script type = "text/javascript" src="final.js"></script>
 </body>
 </html>
