--- a/Histology/midterm/midterm.html
+++ b/Histology/midterm/midterm.html
@@ -65,7 +65,10 @@
     <p id="result" class="result"></p>
     <div id="checkbox">
       <input type="checkbox" data-id="epithelium_" checked> 上皮 <br />
+      <input type="checkbox" data-id="connective_" checked> 結締 <br />
+      <input type="checkbox" data-id="bone_" checked> 骨頭 <br />
       <input type="checkbox" data-id="muscle_" checked> 肌肉 <br />
+      <input type="checkbox" data-id="nerve_" checked> 神經 <br />
     </div>
     <div id="percent_cont">    
       <label for="percentage" id="perc_label">英文學名出現比例：</label>
