--- a/Histology/midterm/midterm.html
+++ b/Histology/midterm/midterm.html
@@ -5,15 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      display: flex;
+      display: block;
       justify-content: center;
       font-size: 125%;
     }
     h2 {
       text-align: center;
     }
+    #inputDiv {
+      margin: auto;
+      width: 40%;
+    }
+    @media only screen and (max-width: 1000px) {
+      #inputDiv {
+        width: 80%;
+      }
+    }
     #ansInput {
       margin-right: 10px;
+      width: max(calc(100% - 200px),200px);
     }
     .button {
       display: inline-block;
@@ -38,6 +48,7 @@
     #checkbox {
       position: absolute;
       bottom: 80px;
+      left: calc(50vw - 160px);
     }
     #percent_cont {
       position: absolute;
@@ -59,10 +70,12 @@
 <body>
   <div class="container" style="margin-top: 35vh;">
     <h2 id="question"></h2>
-    <input type="text" id="ansInput">
-    <button id="submit" class="button">Submit</button>
-    <button id="next" class="button">Next</button>
-    <p id="result" class="result"></p>
+    <div id="inputDiv">
+      <input type="text" id="ansInput">
+      <button id="submit" class="button">Submit</button>
+      <button id="next" class="button">Next</button>
+      <p id="result" class="result"></p>
+    </div>
     <div id="checkbox">
       <input type="checkbox" data-id="epithelium_" checked> 上皮 <br />
       <input type="checkbox" data-id="connective_" checked> 結締 <br />
