--- a/index.html
+++ b/index.html
@@ -1,38 +1,67 @@
-<!-- index.html --> 
-<!DOCTYPE html> 
-<html> 
-  <html lang="zh">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/index_css.css" rel="stylesheet">
-  </head> 
-  <body>
-    <div id="header" class="layout">
-      <div id="header-content" class="content">
-        <h1>Welcome to My Website!</h1>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>考試小幫手</title>
+<link rel="stylesheet" href="index_css.css">
+
+</head>
+<!-- <body style="background-image: url('https://storage.needpix.com/rsynced_images/black-bricks-background.jpg');"> -->
+<body style="background-color:black">
+
+<div class="container">
+    <h1 style="text-align:center; font-size:400%; color:white"class="main-title";>考試小幫手</h1>
+    <h2 style="text-align:center; font-size:100%; color:white"class="sub-title";>Js：1101037&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Css：1101045</h2>
+    <div class="section section1">
+        <div class="background-overlay"></div>
+        <div class="section-title">Prasitology</div>
+        <div class="link-text" style="top:26%;"><a href="/My-Project/Parasite/midterm/code1.html" target="_blank">Midterm Ch-En</a></div>
+            <!-- 第一條連結，Midterm中翻英 -->
+        <div class="link-text" style="top:32%;"><a href="https://www.youtube.com/watch?v=9MCiixIkzUk" target="_blank">Midterm Mock test</a></div>
+            <!-- 第二條連結 Midterm跑台 -->
+         <div class="link-text" style="top:38%;"><a href="/My-Project/Parasite/final/final.html" target="_blank">Finals Ch-En</a></div>
+            <!-- 第三條連結 Finals中翻英 -->
+        <div class="link-text" style="top:44%;"><a href="https://www.youtube.com/watch?v=9MCiixIkzUk" target="_blank">Finals Mock test</a></div>
+            <!-- 第三條連結 Finals跑台 -->
     </div>
-    <div id="navbar" class="layout">
-      <div id="navbar-content" class="content">
-      </div>
+    <div class="section section2">
+        <div class="background-overlay"></div>
+        <div class="section-title">Histology</div>
+        <div class="link-text" style="top:26%;"><a href="/My-Project/histology/midterm/midterm.html" target="_blank">Midterm Ch-En</a></div>
+            <!-- 第一條連結，Midterm中翻英 -->
+        <div class="link-text" style="top:32%;"><a href="/My-Project/histology/midterm-experiment/midterm-experiment.html" target="_blank">Midterm Mock test</a></div>
+            <!-- 第二條連結 Midterm跑台 -->
+        <div class="link-text" style="top:38%;"><a href="/My-Project/histology/final/final.html" target="_blank">Finals Ch-En</a></div>
+            <!-- 第三條連結 Finals中翻英 -->
+        <div class="link-text" style="top:44%;"><a href="/My-Project/histology/final-experiment/final-experiment.html" target="_blank">Finals Mock test</a></div>
+            <!-- 第三條連結 Finals跑台 -->
     </div>
-    <div id="sidebar" class="layout">
-      <div id="sidebar-content" class="content">
-      </div>
+    <div class="section section3">
+        <div class="background-overlay"></div>
+        <div class="section-title"><b>酷東西</b></div>
+        <div class="link-text" style="top:26%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Midterm Ch-En</a></div>
+            <!-- 第一條連結，Midterm中翻英 -->
+        <div class="link-text" style="top:32%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Midterm Mock test</a></div>
+            <!-- 第二條連結 Midterm跑台 -->
+        <div class="link-text" style="top:38%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Finals Ch-En</a></div>
+            <!-- 第三條連結 Finals中翻英 -->
+        <div class="link-text" style="top:44%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Finals Mock test</a></div>
+            <!-- 第三條連結 Finals跑台 -->
     </div>
-    <div id="container" class="layout">
-      <div id="container-content" class="content">
-        <p>Parasite</p>
-        <ul>
-          <li><a href="/My-Project/Parasite/midterm/code1.html">midterm</a></li>
-          <li><a href="/My-Project/Parasite/final/final.html">final</a></li>
-        </ul>
-        <p>Side</p>
-        <ul>
-          <li><a href="/My-Project/Side/CSV to custom text format.html">Custom CSV text format</a></li>
-        </ul>
-      </div> 
+    <div class="section section4">
+        <div class="background-overlay"></div>
+        <div class="section-title"><b>酷東西</b></div>
+        <div class="link-text" style="top:26%;"><a href="https://www.youtube.com/watch?v=_e9yMqmXWo0" target="_blank">Midterm Ch-En</a></div>
+            <!-- 第一條連結，Midterm中翻英 -->
+        <div class="link-text" style="top:32%;"><a href="https://www.youtube.com/watch?v=_e9yMqmXWo0" target="_blank">Midterm Mock test</a></div>
+            <!-- 第二條連結 Midterm跑台 -->
+        <div class="link-text" style="top:38%;"><a href="https://www.youtube.com/watch?v=_e9yMqmXWo0" target="_blank">Finals Ch-En</a></div>
+            <!-- 第三條連結 Finals中翻英 -->
+        <div class="link-text" style="top:44%;"><a href="https://www.youtube.com/watch?v=_e9yMqmXWo0" target="_blank">Finals Mock test</a></div>
+            <!-- 第三條連結 Finals跑台 -->
     </div>
-  </body> 
-</html> 
+</div>
+
+</body>
+</html>
