--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2 style="text-align:center; font-size:100%; color:white"class="sub-title";>Js：1101037&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Css：1101045</h2>
     <div class="section section1">
         <div class="background-overlay"></div>
-        <div class="section-title">Prasitology</div>
+        <div class="section-title">Parasitology</div>
         <div class="link-text" style="top:26%;"><a href="/My-Project/Parasite/midterm/code1.html" target="_blank">Midterm Ch-En</a></div>
             <!-- 第一條連結，Midterm中翻英 -->
         <div class="link-text" style="top:32%;"><a href="https://www.youtube.com/watch?v=9MCiixIkzUk" target="_blank">Midterm Mock test</a></div>
@@ -62,5 +62,6 @@
             <!-- 第三條連結 Finals跑台 -->
     </div>
 </div>
+
 </body>
 </html>
