--- a/histology/midterm-experiment/midterm-experiment.html
+++ b/histology/midterm-experiment/midterm-experiment.html
@@ -75,7 +75,7 @@
       max-width: 100%;
       max-height: 40vh;
       display: block;
-      margin: 0 auto;
+      margin: -20vh auto 0;
     }
   </style>
 </head>
