--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </div>
     <div class="section section3">
         <div class="background-overlay"></div>
-        <div class="section-title"><b>酷東西</b></div>
-        <div class="link-text" style="top:26%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Midterm Ch-En</a></div>
+        <div class="section-title"><b>解剖學</b></div>
+        <div class="link-text" style="top:26%;"><a href="/My-Project/anatomy/midterm/midterm.html" target="_blank">Midterm Ch-En</a></div>
             <!-- 第一條連結，Midterm中翻英 -->
         <div class="link-text" style="top:32%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Midterm Mock test</a></div>
             <!-- 第二條連結 Midterm跑台 -->
