--- a/anatomy/midterm/midterm.html
+++ b/anatomy/midterm/midterm.html
@@ -20,9 +20,6 @@
       #inputDiv {
         width: 80%;
       }
-      #anatomyImg {
-        margin-left: calc(50vw - 250px);
-      }
     }
     #ansInput {
       margin-right: 10px;
@@ -49,6 +46,13 @@
       font-weight: bold;
     }
     #anatomyImg {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+    #anatomyImg img{
       display: block;
       margin-left: auto;
       margin-right: auto;
