--- a/anatomy/midterm/midterm.html
+++ b/anatomy/midterm/midterm.html
@@ -23,7 +23,7 @@
     }
     #ansInput {
       margin-right: 10px;
-      width: max(calc(100% - 200px),200px);
+      width: max(calc(100% - 200px));
     }
     .button {
       display: inline-block;
